src/objects/Co_Op_Invoice_Line_Item__c.object
<CustomObject>
    <description>Allows partners to insert invoice information in salesforce so that they can ask for reimbursement</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Total invoice line item amount</description>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_op_Invoice__c</fullName>
        <description>Linked Co-op Invoice</description>
        <label>Co-op Invoice</label>
        <referenceTo>Co_Op_Invoice__c</referenceTo>
        <relationshipLabel>Co-Op Invoice Line Items</relationshipLabel>
        <relationshipName>Co_Op_Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Line Item description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Co-Op Invoice Line Item</label>
    <nameField>
        <displayFormat>COLineItem-{0000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-Op Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>